# libcupsfilters

./: .gitignore  AUTHORS  CHANGES.md  CONTRIBUTING.md  COPYING  DEVELOPING.md  INSTALL  INSTALL.md  Makefile.am  NOTICE  README.md  TESTING.md  autogen.sh  configure.ac  error.txt  libcupsfilters.pc.in
.github/workflows/: build.yaml  cppcheck.yml  open-document-academy.yml  static-analysis.yml
charset/: pdf.utf-8.heavy  pdf.utf-8.heavy.in  pdf.utf-8.simple  pdf.utf-8.simple.in
ci/: ci-setup.sh
ci/autopkgtest/: run.sh
ci/autopkgtest/debian-tests/: control  libcupsfilters-2-dev  libcupsfilters-2-functionality
cupsfilters/: C-pclmtoraster.c  C-pdf.c  C-pdf.h  C-pwgtopdf.c  bannertopdf.c  bitmap.c  bitmap.h  catalog.c  catalog.h  check.c  cmyk.c  colord.c  colord.h  colormanager.c  colormanager.h  debug-internal.h  debug.c  dither.c  driver.h  filter.c  filter.h  fontembed-private.h  gen-lorem-text.c  ghostscript.c  ieee1284.c  ieee1284.h  image-colorspace.c  image-jpeg-xl.c  image-jpeg-xl.h  image-jpeg.c  image-png.c  image-private.h  image-tiff.c  image-zoom.c  image.c  image.h  imagetopdf.c  imagetoraster.c  ipp-options-private.h  ipp-options.c  (+46 more)
cupsfilters/fontembed/: aglfn13.c  dynstring-private.h  dynstring.c  embed-pdf-private.h  embed-pdf.c  embed-sfnt-private.h  embed-sfnt.c  embed.c  fontfile.c  frequent-private.h  frequent.c  macroman-private.h  sfnt-private.h  sfnt-subset.c  sfnt.c  test-analyze.c  test-pdf.c  test-ps.c
cupsfilters/pdftopdf/: C-intervalset-private.h  C-intervalset.c  C-nup-private.h  C-nup.c  C-pdftopdf-processor-private.h  C-pdftopdf-processor.c  C-pdftopdf.c  C-pptypes-private.h  C-pptypes.c  intervalset-private.h  intervalset.c  intervalset.cxx  ipp-options.c  ipp-options.h  nup-private.h  nup.c  nup.cxx  pdfio-cm-private.h  pdfio-cm.c  pdfio-pdftopdf-private.h  pdfio-pdftopdf-processor-private.h  pdfio-pdftopdf-processor.c  pdfio-pdftopdf.c  pdfio-tools-private.h  pdfio-tools-test.c  pdfio-tools.c  pdfio-xobject-private.h  pdfio-xobject.c  pdftopdf-private.h  pdftopdf-processor-private.h  pdftopdf-processor.c  pdftopdf-processor.cxx  pdftopdf.c  pdftopdf.cxx  pptypes-private.h  pptypes.c  pptypes.cxx  processor.h  qpdf-cm-private.h  qpdf-cm.cxx  (+8 more)
cupsfilters/test_files/: bashrc.urf  onepage-a4-adobe-rgb-8-150dpi.pwg  test_file.pwg  test_text_arabic_rtl.txt  test_text_greek.txt  test_text_russian.txt  test_text_simple.txt
data/: makePDFfromPS.sh
tests/: test_invariant_imagetoraster.c
